* NEW: New supported user interface languages: Georgian (ka), Estonian (et), 
  Bulgarian (bg), Faroese (fo), Croatian (hr), Iloko (ilo), Limburgish (li), 
  Lithuanian (lt), Basa Banyumasan (map-bms), Oriya (or), Pashto (ps), 
  Slovak (sk), Bachkir (ba), Welsh (cy), yiddish (yi), Wolof (yo), 
  Chinese (Hong Kong)(zh-hk), Albanese (sq), Assamese (as), Kannada (kn),
  Quechua (qu), Tulu (tcy)
* NEW: ALT+D shortcut to focus the searchbar (ID: 3475647)
* NEW: --current option to "add" command in kiwix-manage to set the ZIM file a current
* NEW: --noCheck option to "add" command in kiwix-manage to avoid any ZIM quality check
* NEW: Windows self-extracting installer
* NEW: Ask before downloading XML library files (ID: 3442087)
* NEW: kiwix-server able to deal directly with library XML files
* NEW: Speed-up begin of downloads by removing file pre-allocation
* NEw: Reduce GNU/Linux Package file by 30% (by removing the symbol table of XPCOM components)

Kiwix 0.9 beta5
* FIXED: letton language menu item (ID: 3439113)
* FIXED: Duplicates in publisher & language filters in the content manager (ID: 3439108)	
* FIXED: Many localisation files which were broken due to a buggy script (ID: 3440627)
* FIXED: Wrong behaviour in case of two different portable kiwix consecutive runs (ID: 3442083)
* FIXED: Different issues relative to ISO language codes (ID: 3439293)
* FIXED: On Windows, Media Defender complain about chp.exe (ID: 3389953)
* FIXED: Rendering issue when displaying two notifications consecutivly: only the last one was displayed.
* FIXED: Windows default install directory (to match standarts)
* FIXED: Missing Kiwix shortcuts menu entry on Win7 Application menu (ID: 3456428)
* FIXED: Buggy permission eskalation in Windows 7 installer (ID: 3442074)
* FIXED: Buggy behaviour if you close the last tab (ID: 3459365)
* FIXED: Double-checked menu items in language/skin menus in case of abandoned restart process