@@ -11,6 +11,7 @@ locale main ary            locale/ary/main/
 locale main as             locale/as/main/
 locale main ast            locale/ast/main/
 locale main ba             locale/ba/main/
+locale main be             locale/be/main/
 locale main be-tarask      locale/be-tarask/main/
 locale main bg             locale/bg/main/
 locale main bjn            locale/bjn/main/
@@ -41,12 +42,14 @@ locale main hr             locale/hr/main/
 locale main hsb            locale/hsb/main/
 locale main hu             locale/hu/main/
 locale main ia             locale/ia/main/
+locale main ie             locale/ie/main/
 locale main ilo            locale/ilo/main/
 locale main it             locale/it/main/
 locale main ja             locale/ja/main/
 locale main ka             locale/ka/main/
 locale main kn             locale/kn/main/
 locale main ksh            locale/ksh/main/
+locale main lb             locale/lb/main/
 locale main li             locale/li/main/
 locale main lt             locale/lt/main/
 locale main lv             locale/lv/main/
@@ -56,7 +59,10 @@ locale main ml             locale/ml/main/
 locale main ms             locale/ms/main/
 locale main mt             locale/mt/main/
 locale main nb             locale/nb/main/
+locale main ne             locale/ne/main/
 locale main nl             locale/nl/main/
+locale main nn             locale/nn/main/
+locale main oc             locale/oc/main/
 locale main or             locale/or/main/
 locale main pl             locale/pl/main/
 locale main pms            locale/pms/main/
@@ -64,9 +70,12 @@ locale main ps             locale/ps/main/
 locale main pt             locale/pt/main/
 locale main pt-br          locale/pt-br/main/
 locale main qu             locale/qu/main/
+locale main rm             locale/rm/main/
 locale main ro             locale/ro/main/
 locale main ru             locale/ru/main/
 locale main rue            locale/rue/main/
+locale main sh             locale/sh/main/
+locale main si             locale/si/main/
 locale main sk             locale/sk/main/
 locale main sl             locale/sl/main/
 locale main sr-ec          locale/sr-ec/main/
@@ -95,6 +104,7 @@ locale branding ary        locale/branding/
 locale branding as         locale/branding/
 locale branding ast        locale/branding/
 locale branding ba         locale/branding/
+locale branding be         locale/branding/
 locale branding be-tarask  locale/branding/
 locale branding bg         locale/branding/
 locale branding bjn        locale/branding/
@@ -124,12 +134,14 @@ locale branding hr         locale/branding/
 locale branding hsb        locale/branding/
 locale branding hu         locale/branding/
 locale branding ia         locale/branding/
+locale branding ie         locale/branding/
 locale branding ilo        locale/branding/
 locale branding it         locale/branding/
 locale branding ja         locale/branding/
 locale branding ka         locale/branding/
 locale branding kn         locale/branding/
 locale branding ksh        locale/branding/
+locale branding lb         locale/branding/
 locale branding li         locale/branding/
 locale branding lt         locale/branding/
 locale branding lv         locale/branding/
@@ -139,7 +151,10 @@ locale branding ml         locale/branding/
 locale branding ms         locale/branding/
 locale branding mt         locale/branding/
 locale branding nb         locale/branding/
+locale branding ne         locale/branding/
 locale branding nl         locale/branding/
+locale branding nn         locale/branding/
+locale branding oc         locale/branding/
 locale branding or         locale/branding/
 locale branding pl         locale/branding/
 locale branding pms        locale/branding/
@@ -147,9 +162,12 @@ locale branding ps         locale/branding/
 locale branding pt         locale/branding/
 locale branding pt-br      locale/branding/
 locale branding qu         locale/branding/
+locale branding rm         locale/branding/
 locale branding ro         locale/branding/
 locale branding ru         locale/branding/
 locale branding rue        locale/branding/
+locale branding sh         locale/branding/
+locale branding si         locale/branding/
 locale branding sk         locale/branding/
 locale branding sl         locale/branding/
 locale branding sq         locale/branding/
