@@ -10,6 +10,7 @@ locale main ary            jar:locale.jar!/locale/ary/main/
 locale main as             jar:locale.jar!/locale/as/main/
 locale main ast            jar:locale.jar!/locale/ast/main/
 locale main ba             jar:locale.jar!/locale/ba/main/
+locale main be             jar:locale.jar!/locale/be/main/
 locale main be-tarask      jar:locale.jar!/locale/be-tarask/main/
 locale main bg             jar:locale.jar!/locale/bg/main/
 locale main bjn            jar:locale.jar!/locale/bjn/main/
@@ -40,12 +41,14 @@ locale main hr             jar:locale.jar!/locale/hr/main/
 locale main hu             jar:locale.jar!/locale/hu/main/
 locale main hsb            jar:locale.jar!/locale/hsb/main/
 locale main ia             jar:locale.jar!/locale/ia/main/
+locale main ie             jar:locale.jar!/locale/ie/main/
 locale main ilo            jar:locale.jar!/locale/ilo/main/
 locale main it             jar:locale.jar!/locale/it/main/
 locale main ja             jar:locale.jar!/locale/ja/main/
 locale main ka             jar:locale.jar!/locale/ka/main/
 locale main kn             jar:locale.jar!/locale/kn/main/
 locale main ksh            jar:locale.jar!/locale/ksh/main/
+locale main lb             jar:locale.jar!/locale/lb/main/
 locale main li             jar:locale.jar!/locale/li/main/
 locale main lt             jar:locale.jar!/locale/lt/main/
 locale main lv             jar:locale.jar!/locale/lv/main/
@@ -55,7 +58,10 @@ locale main ml             jar:locale.jar!/locale/ml/main/
 locale main ms             jar:locale.jar!/locale/ms/main/
 locale main mt             jar:locale.jar!/locale/mt/main/
 locale main nb             jar:locale.jar!/locale/nb/main/
+locale main ne             jar:locale.jar!/locale/ne/main/
 locale main nl             jar:locale.jar!/locale/nl/main/
+locale main nn             jar:locale.jar!/locale/nn/main/
+locale main oc             jar:locale.jar!/locale/oc/main/
 locale main or             jar:locale.jar!/locale/or/main/
 locale main pl             jar:locale.jar!/locale/pl/main/
 locale main pms            jar:locale.jar!/locale/pms/main/
@@ -63,9 +69,12 @@ locale main ps             jar:locale.jar!/locale/ps/main/
 locale main pt             jar:locale.jar!/locale/pt/main/
 locale main pt-br          jar:locale.jar!/locale/pt-br/main/
 locale main qu             jar:locale.jar!/locale/qu/main/
+locale main rm             jar:locale.jar!/locale/rm/main/
 locale main ro             jar:locale.jar!/locale/ro/main/
 locale main ru             jar:locale.jar!/locale/ru/main/
 locale main rue            jar:locale.jar!/locale/rue/main/
+locale main sh             jar:locale.jar!/locale/sh/main/
+locale main si             jar:locale.jar!/locale/si/main/
 locale main sk             jar:locale.jar!/locale/sk/main/
 locale main sl             jar:locale.jar!/locale/sl/main/
 locale main sq             jar:locale.jar!/locale/sq/main/
@@ -94,6 +103,7 @@ locale branding ary        jar:locale.jar!/locale/branding/
 locale branding as         jar:locale.jar!/locale/branding/
 locale branding ast        jar:locale.jar!/locale/branding/
 locale branding ba         jar:locale.jar!/locale/branding/
+locale branding be         jar:locale.jar!/locale/branding/
 locale branding be-tarask  jar:locale.jar!/locale/branding/
 locale branding bg         jar:locale.jar!/locale/branding/
 locale branding bjn        jar:locale.jar!/locale/branding/
@@ -124,12 +134,14 @@ locale branding hr         jar:locale.jar!/locale/branding/
 locale branding hsb        jar:locale.jar!/locale/branding/
 locale branding hu         jar:locale.jar!/locale/branding/
 locale branding ia         jar:locale.jar!/locale/branding/
+locale branding ie         jar:locale.jar!/locale/branding/
 locale branding ilo        jar:locale.jar!/locale/branding/
 locale branding it         jar:locale.jar!/locale/branding/
 locale branding ja         jar:locale.jar!/locale/branding/
 locale branding ka         jar:locale.jar!/locale/branding/
 locale branding kn         jar:locale.jar!/locale/branding/
 locale branding ksh        jar:locale.jar!/locale/branding/
+locale branding lb         jar:locale.jar!/locale/branding/
 locale branding li         jar:locale.jar!/locale/branding/
 locale branding lt         jar:locale.jar!/locale/branding/
 locale branding lv         jar:locale.jar!/locale/branding/
@@ -139,7 +151,10 @@ locale branding ml         jar:locale.jar!/locale/branding/
 locale branding ms         jar:locale.jar!/locale/branding/
 locale branding mt         jar:locale.jar!/locale/branding/
 locale branding nb         jar:locale.jar!/locale/branding/
+locale branding ne         jar:locale.jar!/locale/branding/
 locale branding nl         jar:locale.jar!/locale/branding/
+locale branding nn         jar:locale.jar!/locale/branding/
+locale branding oc         jar:locale.jar!/locale/branding/
 locale branding or         jar:locale.jar!/locale/branding/
 locale branding pl         jar:locale.jar!/locale/branding/
 locale branding pms        jar:locale.jar!/locale/branding/
@@ -147,9 +162,12 @@ locale branding ps         jar:locale.jar!/locale/branding/
 locale branding pt         jar:locale.jar!/locale/branding/
 locale branding pt-br      jar:locale.jar!/locale/branding/
 locale branding qu         jar:locale.jar!/locale/branding/
+locale branding rm         jar:locale.jar!/locale/branding/
 locale branding ro         jar:locale.jar!/locale/branding/
 locale branding ru         jar:locale.jar!/locale/branding/
 locale branding rue        jar:locale.jar!/locale/branding/
+locale branding sh         jar:locale.jar!/locale/branding/
+locale branding si         jar:locale.jar!/locale/branding/
 locale branding sk         jar:locale.jar!/locale/branding/
 locale branding sl         jar:locale.jar!/locale/branding/
 locale branding sq         jar:locale.jar!/locale/branding/
