@@ -5,6 +5,7 @@ _languagesHash['ary']       = "الدارجة";
 _languagesHash['as']        = "অসমীয়া";
 _languagesHash['ast']       = "Asturianu";
 _languagesHash['ba']        = "Bašqort";
+_languagesHash['be']        = "Беларуская";
 _languagesHash['be-tarask'] = "тарашкевіца, клясычны правапіс";
 _languagesHash['bg']        = "Български";
 _languagesHash['bjn']       = "Bahasa Banjar";
@@ -38,12 +39,14 @@ _languagesHash['hr']        = "Олык Марий";
 _languagesHash['hsb']       = "Hornjoserbsce";
 _languagesHash['hu']        = "Magyar";
 _languagesHash['ia']        = "Interlingua";
+_languagesHash['ie']        = "Interlingue";
 _languagesHash['ilo']       = "Ilokano";
 _languagesHash['it']        = "Italiano";
 _languagesHash['ja']        = "日本語";
 _languagesHash['ka']        = "ქართული";
 _languagesHash['kn']        = "ಕನ್ನಡ";
 _languagesHash['ksh']       = "Ripoarisch";
+_languagesHash['lb']        = "Lëtzebuergesch";
 _languagesHash['li']        = "Limburgs";
 _languagesHash['lt']        = "Lietuvių";
 _languagesHash['lv']        = "Latviešu";
@@ -54,8 +57,11 @@ _languagesHash['mr']        = "मराठी";
 _languagesHash['ms']        = "Bahasa Melayu";
 _languagesHash['mt']        = "Malti";
 _languagesHash['my']        = "မြန်မာဘာသာ";
+_languagesHash['ne']        = "नेपाली";
 _languagesHash['nl']        = "Nederlands";
 _languagesHash['nb']        = "Norsk (bokmål)";
+_languagesHash['nn']        = "Norsk (nynorsk)";
+_languagesHash['oc']        = "Occitan";
 _languagesHash['or']        = "ଓଡ଼ିଆ";
 _languagesHash['pl']        = "Język polski";
 _languagesHash['pms']       = "Piemontèis";
@@ -64,9 +70,12 @@ _languagesHash['ps']        = "پښتو";
 _languagesHash['pt']        = "Português";
 _languagesHash['pt-br']     = "Português do Brasil";
 _languagesHash['qu']        = "Runa Simi";
+_languagesHash['rm']        = "Rumantsch";
 _languagesHash['ro']        = "Română";
 _languagesHash['ru']        = "Русский";
 _languagesHash['rue']       = "Русиньскый";
+_languagesHash['sh']        = "Srpskohrvatski / Српскохрватски";
+_languagesHash['si']        = "සිංහල";
 _languagesHash['sk']        = "Slovenčina";
 _languagesHash['sl']        = "Slovenščina";
 _languagesHash['sq']        = "Shqip";
